subprojects/swen430/src/test/resources/tests/invalid/Typing_Invalid_24.while
int f(int x) {
    for(int i=0;i<x;i=i+1.0) {
    	   x = x + 1;
    }
    return x;
}